--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html,body{
 }
 
 nav{
-    background-color: lightseagreen;
+    /* background-color: lightseagreen; */
     height: 50px;
     position: fixed;
     top: 0;
@@ -25,12 +25,12 @@ nav{
     align-items: center;
     justify-content: center;
     height: 100%;
-    color: white;
+    /* color: white; */
 }
 
 #hero-section{
     height: 80vh;
-    background-color: lightgray;
+    /* background-color: lightgray; */
     /* background: transparent; */
     display: flex;
     align-items: center;
@@ -51,7 +51,7 @@ button:active{
 
 footer{
     height: 300px;
-    background-color: darkcyan;
+    /* background-color: darkcyan; */
     padding: 20px 40px;
     /* color: white; */
     display: flex;
