--- a/style.css
+++ b/style.css
@@ -4,19 +4,33 @@
     box-sizing: border-box;
 }
 html,body{
-    height: 100%;
+    height: 100vh;
     width: 100%;
+    font-family: "Poppins", sans-serif;
+    transition: 0.3s ease;
 }
 
 nav{
-    /* background-color: lightseagreen; */
     height: 50px;
-    position: fixed;
-    top: 0;
+    /* position: fixed; */
+    /* top: 0; */
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border-bottom: 2px solid black;
+    padding-inline: 50px;
 }
 
+.logo{
+    height: 100%;
+    padding-right: 2rem;
+    border-right: 2px solid black;
+    letter-spacing: 5px;
+    font-size: 1.7rem;
+    display: flex;
+    align-items: center;
+}
 
 .nav-links{
     display: flex;
@@ -28,8 +42,16 @@ nav{
     /* color: white; */
 }
 
+.nav-links li{
+    cursor: pointer;
+}
+
+.logo{
+    cursor: pointer;
+}
+
 #hero-section{
-    height: 80vh;
+    height: calc(100vh - 270px);
     /* background-color: lightgray; */
     /* background: transparent; */
     display: flex;
@@ -40,9 +62,12 @@ nav{
 button{
     padding: 10px 20px;
     border-radius: 5px;
+    border: 3px solid black;
     font-weight: 600;
     cursor: pointer;
     transition: 0.3s ease;
+    font-family: "Poppins", sans-serif;
+    box-shadow: 3px 3px black;
 }
 
 button:active{
@@ -50,12 +75,13 @@ button:active{
 }
 
 footer{
-    height: 300px;
+    height: 220px;
     /* background-color: darkcyan; */
-    padding: 20px 40px;
+    padding: 20px 60px;
     /* color: white; */
     display: flex;
     justify-content: space-between;
+    /* border-top: 2px solid black; */
     border-top: 2px solid black;
 
 }
@@ -70,4 +96,21 @@ footer{
     display: flex;
     flex-direction: column;
     gap: 5px;
+}
+
+.f-logo{
+    font-weight: 500;
+    font-size: 1.7rem;
+    letter-spacing: 5px;
+}
+
+.links{
+    display: flex;
+    gap: 70px;
+}
+
+.desc{
+    width: 60%;
+    text-align: justify;
+    padding-top: 10px;
 }
